--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "hapi": "^17.5.1"
+    "hapi": "^17.5.1",
+    "hapi-plugin-pg": "^1.1.2",
+    "joi": "^13.4.0",
+    "nodemon": "^1.17.5",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "pg-promise": "^5.9.7",
+    "sequelize": "^4.37.10"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC"
